--- a/2020秋招手册.md
+++ b/2020秋招手册.md
@@ -6,19 +6,39 @@
 
 ## 目录
 
+- [简历](#简历)
 
 - [笔试](#笔试)
 - [面试](#面试)
-  - [电话面试](#电话面试) 
+  - [苹果电话面试总结](#苹果电话面试总结) 
 - [跟进](#跟进)
 
 
+## 简历
 
 
 ## 笔试
 
 ## 面试
 
-### 电话面试
+### 苹果电话面试总结
+
+时间：2019.06.03
+
+岗位：苹果 Apple Store Leader Program 申请
+
+#### 总结
+这一次电话面试总体来说缺乏良好的回答思路，没有紧扣自己的优势来阐释。在交谈中存在紧张，结巴的现象，需要加强改进。
+
+1. 准备阶段准备不足，需要充分了解总结项目详情，抓住该项目能力需求重点，分析自己投递该项目的3点优势。以这次苹果为例，需要重点关注领导力这一能力。
+2. 回答没有良好的逻辑结构，需要多次练习。可以以论点+事例的形式进行回答。同时需要对回答进行精简，不要过长。
+3. 需要控制情绪，保持冷静，机会永远不止这一次，不要过度激动、紧张或者抑郁。
+4. 多进行语言训练，锻炼自己的语言能力以及总结能力。
+5. 需要使用中英双语进行准备。
+6. 区别不同的面试形式。有的面试有自我介绍，有的没有。电话面试需要有逻辑的语言表达，及时反馈和直切重点。
+7. 第一轮的面试意义在于了解受访者，所以需要将我自身的优势通过不同的问题展现。
+ 
+
+
 
 ## 跟进
