--- a/2020秋招手册.md
+++ b/2020秋招手册.md
@@ -4,17 +4,21 @@
 
 心诀：**慌则乱，不慌则不乱**
 
+战略上藐视，战术上重视。
+
 ## 目录
 
-- [简历](#简历)
-
+- [目标公司](#目标公司)
+- [个人简历](#个人简历)
 - [笔试](#笔试)
 - [面试](#面试)
   - [苹果电话面试总结](#苹果电话面试总结) 
 - [跟进](#跟进)
 
 
-## 简历
+## 目标公司
+
+## 个人简历
 
 
 ## 笔试
@@ -38,7 +42,4 @@
 6. 区别不同的面试形式。有的面试有自我介绍，有的没有。电话面试需要有逻辑的语言表达，及时反馈和直切重点。
 7. 第一轮的面试意义在于了解受访者，所以需要将我自身的优势通过不同的问题展现。
  
-
-
-
 ## 跟进
