--- a/2020秋招手册.md
+++ b/2020秋招手册.md
@@ -14,7 +14,7 @@
 - [面试](#面试)
   - [苹果电话面试总结](#苹果电话面试总结) 
 - [跟进](#跟进)
-
+- [心态调整](#心态调整)
 
 ## 目标公司
 
@@ -43,3 +43,15 @@
 7. 第一轮的面试意义在于了解受访者，所以需要将我自身的优势通过不同的问题展现。
  
 ## 跟进
+
+面试完成24小时内发送Thank-you Letter。
+
+## 心态调整
+
+保持良好的心态。
+
+我最终只需要一个offer。所以说就算是再多的失败也没关系。重要的是总结失败，提升下一次求职的成功几率。
+
+每一次失败都是为下一次的成功做准备。
+
+找到那个适合自己的才是最重要的，不要被别人过度影响了自己的节奏。
