--- a/2020秋招手册.md
+++ b/2020秋招手册.md
@@ -25,6 +25,8 @@
 
 ## 面试
 
+
+
 ### 苹果电话面试总结
 
 时间：2019.06.03
@@ -41,6 +43,7 @@
 5. 需要使用中英双语进行准备。
 6. 区别不同的面试形式。有的面试有自我介绍，有的没有。电话面试需要有逻辑的语言表达，及时反馈和直切重点。
 7. 第一轮的面试意义在于了解受访者，所以需要将我自身的优势通过不同的问题展现。
+8. 记得准备回问面试官关于公司的问题。
  
 ## 跟进
 
