--- a/2020秋招手册.md
+++ b/2020秋招手册.md
@@ -49,6 +49,10 @@
 
 面试完成24小时内发送Thank-you Letter。
 
+
+参考链接：
+[关于生要见offer死要见拒信的讨论统一回复-珊珊-谷](https://www.linkedin.com/pulse/关于生要见offer死要见拒信的讨论统一回复-珊珊-谷/)
+
 ## 心态调整
 
 保持良好的心态。
